<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/YELLOW_LIGHT"
    tools:context=".RegisterActivity">


    <Button
        android:id="@+id/btnUser_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/bg_user_photo_rounded"
        android:text="@string/photo_hint"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.215" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgPhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@color/colorPrimary"
        app:civ_border_width="5dp"
        app:civ_border_color="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/btnUser_photo"
        app:layout_constraintEnd_toEndOf="@+id/btnUser_photo"
        app:layout_constraintStart_toStartOf="@+id/btnUser_photo"
        app:layout_constraintTop_toTopOf="@+id/btnUser_photo" />

    <EditText
        android:id="@+id/reg_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edittext_rounded"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:paddingLeft="8dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUser_photo"
        app:layout_constraintVertical_bias="0.131" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edittext_rounded"
        android:ems="10"
        android:hint="@string/email_hint"
        android:paddingLeft="8dp"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/reg_username"
        app:layout_constraintTop_toBottomOf="@+id/reg_username"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:paddingLeft="8dp"
        android:inputType="textPassword"
        android:background="@drawable/bg_edittext_rounded"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/reg_email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/reg_email"
        app:layout_constraintTop_toBottomOf="@+id/reg_email" />

    <Button
        android:id="@+id/login_btn_enter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:text="@string/insert"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@drawable/bg_buttons_rounded"
        app:layout_constraintEnd_toEndOf="@+id/reg_password"
        app:layout_constraintStart_toStartOf="@+id/reg_password"
        app:layout_constraintTop_toBottomOf="@+id/reg_password" />




</androidx.constraintlayout.widget.ConstraintLayout>